--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,7 @@
 php_flag display_errors on
 
 <IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{HTTPS} !=on
+    RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 </IfModule>
